[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chajra"
version = "0.0.1"
authors = [
  { name="Salim Hertelli" },
]
description = "This is chajra"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
]

[project.urls]
GitHub = "https://github.com/salim-hertelli/chajra"
Issues = "https://github.com/salim-hertelli/chajra/issues"